--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <title>IE Department</title>
+    <link rel="shortcut icon" href="images/favicon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="style.css" media="screen">
 <link rel="stylesheet" href="IE-Department.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
